new grammar, updated plan

--- a/miod/miod-parser/build.gradle
+++ b/miod/miod-parser/build.gradle
@@ -45,3 +45,7 @@ dependencies {
 generateGrammarSource {
     arguments += ["-long-messages", "-package", "org.miod.parser.generated"]
 }
+
+compileKotlin {
+    dependsOn(generateGrammarSource)
+}
